# fta_perception_ros

./: .gitignore  .gitmodules  README.md  compile_commands.json  get-resources  lsp-refresh-includes  out.base64  requirements.txt  uml
.github/workflows/: ci.yml
src/center_estimation/: CMakeLists.txt  package.xml
src/center_estimation/src/: center_estimation.cpp
src/cluster/: package.xml  setup.cfg  setup.py
src/cluster/cluster/: cluster.py  viz.py
src/ft_cluster_cpp/: CMakeLists.txt  package.xml
src/ft_cluster_cpp/lib/shaders/: compute.glsl  sum.glsl
src/ft_cluster_cpp/src/: cluster.cpp  cluster_gl.cpp  cluster_gl.hpp
src/ft_perception_synthesis/: CMakeLists.txt  package.xml
src/ft_perception_synthesis/launch/: perception.launch.py  py  synthesis.launch.py  unified.launch.py  visualise.launch.py
src/ft_perception_synthesis/src/: perception.cpp
src/ft_semantic_segmentation/: CMakeLists.txt  package.xml
src/fta/: CMakeLists.txt  package.xml
src/perception_msgs/: CMakeLists.txt  package.xml
src/perception_msgs/msg/: ConeArray.msg  Zed.msg
src/perception_msgs/srv/: Cluster.srv  ForceSegment.srv  GetCenters.srv
src/segmentation/: package.xml  setup.py
src/segmentation/segmentation/: segmentation.py  visualize.py
src/segmentation/share/: cgnet.ts
src/video_capture/: CMakeLists.txt  learned  package.xml
src/video_capture/src/: video_capture.cpp
src/zed_capture/: CMakeLists.txt  package.xml
src/zed_capture/src/: zed_capture.cpp
